<resources>
    <string name="app_name">Nanodegree Score Counter</string>
    <string name="click_for_la_liga_scores"><![CDATA[<< Click for La Liga Scores]]></string>
    <string name="n_click_for_premier_league_scores"><![CDATA[<< Click for Premier League Scores]]></string>
    <string name="click_for_bundes_liga_scores"><![CDATA[<< Click for Bundes Liga Scores]]></string>
    <string name="reset1">RESET</string>
    <string name="foul1">FOUL</string>
    <string name="_01">0</string>
    <string name="_02">0</string>
    <string name="foul2">FOUL</string>
    <string name="goal1">GOAL</string>
    <string name="goal2">GOAL</string>
    <string name="_03">0</string>
    <string name="hyphen1">-</string>
    <string name="_04">0</string>
    <string name="_05">0</string>
    <string name="_reset">reset</string>
    <string name="_foul1">foul</string>
    <string name="_06">0</string>
    <string name="_foul">foul</string>
    <string name="_goal2">goal</string>
    <string name="_goal">goal</string>
    <string name="_07">0</string>
    <string name="hyphen2">-</string>
    <string name="_08">0</string>
    <string name="_09">0</string>
    <string name="hyphen3">-</string>
    <string name="_00">0</string>
    <string name="goal4">GOAL</string>
    <string name="goal5">GOAL</string>
    <string name="foul3">FOUL</string>
    <string name="_000">0</string>
    <string name="_0000">0</string>
    <string name="foul5">FOUL</string>
    <string name="reset5">RESET</string>
    <string name="_00000">0</string>
    <string name="hyphen">-</string>
    <string name="_001">0</string>
    <string name="goal6">GOAL</string>
    <string name="goal">GOAL</string>
    <string name="foul6">FOUL</string>
    <string name="_011">0</string>
    <string name="_0">0</string>
    <string name="foul">FOUL</string>
    <string name="reset">RESET</string>
</resources>
