<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/root_layout_background"
    tools:context=".BundesLigaActivity">

    <RelativeLayout
        android:id="@+id/relative_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/football_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/football_counter"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/relative_one"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/bundes_liga_one" />

        <TextView
            android:id="@+id/bundes_id"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/bundes_liga"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/liga_id"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/bundes_liga_one"
            android:paddingLeft="4dp"
            android:textColor="@color/text_white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/bundes_liga" />
    </LinearLayout>

    <TextView
        android:id="@+id/bayern_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/bayern_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayern_name"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/bayern" />

    <TextView
        android:id="@+id/zero_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/bayern_logo"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/hyphen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/zero_text"
        android:fontFamily="sans-serif-light"
        android:text="@string/hyphen"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/zero_text_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/hyphen"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/dortmund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/zero_text_two"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/dortmund_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dortmund"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/zero_text_two"
        android:src="@drawable/dortmund" />

    <Button
        android:id="@+id/bayern_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayern_logo"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="16dp"
        android:background="@color/bayern_goal"
        android:text="@string/goal"
        android:textColor="@color/text_white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/dortmund_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dortmund_logo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@id/zero_text_two"
        android:background="@color/dortmund_goal"
        android:text="@string/goal"
        android:textColor="@color/text_black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/bayern_foul_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayern_goal_button"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@color/bayern_goal"
        android:fontFamily="sans-serif-light"
        android:text="@string/foul"
        android:textColor="@color/text_white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bayern_foul_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayern_goal_button"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/bayern_foul_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <View
        android:id="@+id/view_tag"
        android:layout_width="1dp"
        android:layout_height="100dp"
        android:layout_below="@id/bayern_goal_button"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/bayern_foul_zero"
        android:background="@color/bundes_liga_one" />

    <TextView
        android:id="@+id/dortmund_foul_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bayern_goal_button"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/view_tag"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <Button
        android:id="@+id/dortmund_foul_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dortmund_goal_button"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/bayern_foul_zero"
        android:background="@color/dortmund_goal"
        android:fontFamily="sans-serif-light"
        android:text="@string/foul"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_tag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:background="@color/bundes_liga"
        android:text="@string/reset"
        android:textSize="25sp" />
</RelativeLayout>