<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/root_layout_background"
    tools:context=".PremierLeagueActivity">

    <RelativeLayout
        android:id="@+id/relative_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/football_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/football_counter"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_black"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/relative_one"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/prem_three" />

        <TextView
            android:id="@+id/premier_id"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/premier_league_one"
            android:fontFamily="sans-serif-light"
            android:padding="2dp"
            android:textColor="@color/text_black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/league_id"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/premier_league"
            android:padding="2dp"
            android:textColor="@color/text_white"
            android:textSize="25sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/prem_two" />
    </LinearLayout>

    <TextView
        android:id="@+id/arsenal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/arsenal_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arsenal_name"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/arsenal" />

    <TextView
        android:id="@+id/zero_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/arsenal_logo"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/hyphen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/zero_text"
        android:fontFamily="sans-serif-light"
        android:text="@string/hyphen"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/zero_text_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="60dp"
        android:layout_toRightOf="@id/hyphen"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/man_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/zero_text_two"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/man_city_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/man_city"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/zero_text_two"
        android:src="@drawable/mancity" />

    <Button
        android:id="@+id/arsenal_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arsenal_logo"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="8dp"
        android:background="@color/arsenal_goal"
        android:text="@string/_goal"
        android:textColor="@color/text_white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/man_city_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/man_city_logo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="19dp"
        android:layout_toRightOf="@id/zero_text_two"
        android:background="@color/mancity_goal"
        android:text="@string/_goal"
        android:textColor="@color/text_black"
        android:textSize="25sp" />

    <Button
        android:id="@+id/arsenal_foul_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arsenal_goal_button"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="@color/arsenal_goal"
        android:fontFamily="sans-serif-light"
        android:text="@string/_foul"
        android:textColor="@color/text_white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/arsenal_foul_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arsenal_goal_button"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/arsenal_foul_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <View
        android:id="@+id/view_tag"
        android:layout_width="1dp"
        android:layout_height="100dp"
        android:layout_below="@id/arsenal_goal_button"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/arsenal_foul_zero"
        android:background="@color/premier_league" />

    <TextView
        android:id="@+id/mancity_foul_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/arsenal_goal_button"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/view_tag"
        android:fontFamily="sans-serif-light"
        android:text="@string/_0"
        android:textColor="@color/text_black"
        android:textSize="70sp" />

    <Button
        android:id="@+id/mancity_foul_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/man_city_goal_button"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@id/arsenal_foul_zero"
        android:background="@color/mancity_goal"
        android:fontFamily="sans-serif-light"
        android:text="@string/_foul"
        android:textColor="@color/text_black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_tag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:background="@color/prem_three"
        android:text="@string/_reset"
        android:textSize="25sp" />
</RelativeLayout>